# voice-keyboard

./: .gitignore  BOM.md  CIRCUIT.md  LICENSE  README.md  REQUIREMENTS.md  REQUIREMENTS_EN.md  SPEECH_RECOGNITION.md
voice-keyboard-firmware/: CMakeLists.txt
voice-keyboard-firmware/main/: CMakeLists.txt  main.c  voice-keyboard-firmware.c  voice_commands.c  voice_commands.h
voice-keyboard-firmware/main/config/: audio_processor.c  audio_processor.h  config.h  gpio_config.c  gpio_config.h  hid_config.c  hid_config.h  i2s_config.c  i2s_config.h  speech_recognition.c  speech_recognition.h  vad_detector.c  vad_detector.h  voice_commands.c  voice_commands.h
voice-keyboard-firmware/main/tasks/: audio_task.c  audio_task.h  gpio_task.c  gpio_task.h  hid_task.c  hid_task.h  speech_task.c  speech_task.h
