idf_component_register(SRCS "main.c"
                            "config/i2s_config.c"
                            "config/gpio_config.c"
                            "config/audio_processor.c"
                            "config/vad_detector.c"
                            "config/speech_recognition.c"
                            "tasks/gpio_task.c"
                            "tasks/audio_task.c"
                            "tasks/speech_task.c"
                            "tasks/hid_task.c"
                            "voice_commands.c"
                    INCLUDE_DIRS "."
                    REQUIRES driver esp_common)
